--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -4,12 +4,39 @@
 *{
     font-family: "Montserrat", sans-serif;
 }
+
+/*CSS for home page*/
 .home-button {
     color: black;
     font-size: 2rem;
     font-weight: 700;
     cursor: pointer;
     
+}
+section {
+    display:grid;
+    place-items: center;
+    align-content: center;
+    min-height: 100vh;
+}
+
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+    margin-bottom: 100px;
+}
+
+@media(prefers-reduced-motion){
+    .hidden {
+        transition: none;
+    }
+}
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
 }
 .nav-link {
     color: black;
@@ -24,7 +51,6 @@
     border-bottom-right-radius: 15px;
     
 }
-
 
 .nav-link:hover {
     color: white;
@@ -156,6 +182,7 @@
     background-image: linear-gradient(90deg,rgba(0,0,0),rgba(0,0,0, 0.7),transparent);
 }
 
+/* Jasmin Accordion CSS*/
 .accordion .wrapper .question-container:hover {
     color: black;
     background-image: linear-gradient(90deg,rgba(0,0,0,0.2),rgba(0,0,0,0.04),transparent);
@@ -170,7 +197,17 @@
     color: rgb(0, 209, 133);
     background-image: linear-gradient(90deg,rgba(0,0,0,0.2),rgba(0,0,0,0.04),transparent);
 }
-
+.accordion .wrapper.arrow.Jasmin{
+    font-size: 2rem;
+    transition: .5s ease-in-out;
+    color: rgba(0,209,133);
+  }
+  
+.accordion .arrow.Jasmin.active {
+    rotate: 180deg;
+    color: rgba(0,209,133);
+}
+/* Word-Boss Accordion CSS*/
 .accordion .question-container.Word-Boss.active {
     color: white;
     background-image: linear-gradient(90deg,rgb(255,140,0), white);
@@ -180,39 +217,61 @@
     color: rgb(255,140,0);
     background-image: linear-gradient(90deg,rgba(0,0,0,0.2),rgba(0,0,0,0.04),transparent);
 }
-
+.accordion .wrapper.arrow.Word-Boss{
+    font-size: 2rem;
+    transition: .5s ease-in-out;
+    color: rgb(255,140,0);
+  }
+  
+.accordion .arrow.Word-Boss.active {
+    rotate: 180deg;
+    color: rgb(255,140,0);
+}
+/* Jimbro Accordion CSS*/
 .accordion .question-container.Jimbro.active {
     color: white;
     background-image: linear-gradient(90deg,#325288, white);
 }
 
 .accordion .wrapper .question-container.Jimbro:hover {
-    color: #325288; ;
+    color: #325288;
     background-image: linear-gradient(90deg,rgba(0,0,0,0.2),rgba(0,0,0,0.04),transparent);
 }
 
+.accordion .wrapper.arrow.Jimbro{
+    font-size: 2rem;
+    transition: .5s ease-in-out;
+    color: #325288;
+  }
+  
+.accordion .arrow.Jimbro.active {
+    rotate: 180deg;
+    color: #325288; 
+}
+
+/* Trvl Accordion CSS*/
 .accordion .question-container.Trvl.active {
     color: white;
     background-image: linear-gradient(90deg,#FF1A1A, white);
 }
 
 .accordion .wrapper .question-container.Trvl:hover {
-    color: #FF1A1A; ;
+    color: #FF1A1A;
     background-image: linear-gradient(90deg,rgba(0,0,0,0.2),rgba(0,0,0,0.04),transparent);
 }
 
-.accordion .wrapper .arrow {
-  font-size: 2rem;
-  transition: .5s ease-in-out;
+.accordion .wrapper.arrow.Trvl{
+    font-size: 2rem;
+    transition: .5s ease-in-out;
+    color: #FF1A1A;
+  }
+  
+.accordion .arrow.Trvl.active {
+    rotate: 180deg;
+    color: #FF1A1A;
 }
 
-
-
-.accordion .arrow.active {
-  rotate: 180deg;
-  color: black;
-}
-
+/*Inner content for accordion*/
 .accordion .wrapper .answer-container {
   padding: 0 1rem;
   transition: height .7s ease-in-out;
@@ -223,6 +282,8 @@
   font-size: 25px;
   font-style: italic;
 }
+
+
 .hover-link {
     position: relative;
     text-decoration: none;
@@ -252,7 +313,7 @@
     transition: opacity 0.3s ease;
     pointer-events: none;
   }
-
+/*Git-hub link */
   .git-Image {
     border-radius: 50%;
     overflow: hidden;
@@ -282,3 +343,20 @@
     transition: opacity 0.3s ease;
     pointer-events: none;
   }
+
+  /*CSS for resume page*/
+
+.resume-button{
+    width: 1000px;
+    height: 75px;
+    justify-content: center;
+    font-size: 45px;
+    display: flex;
+    background-color: black;
+    border-color: black;
+}
+
+.resume-button:hover{
+    background-color: white;
+    color: black;
+}
