--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -51,9 +51,8 @@
         width: 100%;
         text-align: center;
         overflow: hidden;
-        animation: 
-            typing 2s,
-            cursor .4s step-end infinite alternate; 
+        padding-left: 10px;
+        padding-right: 10px;
     }
     .header2-text {
         font-size: 1.25rem;
@@ -64,9 +63,6 @@
         text-align: center;
         overflow: hidden;
         margin-bottom: 25px;
-        animation: 
-            typing 2s,
-            cursor .4s step-end infinite alternate; 
     }
     .about-container{
         display: flex;
@@ -95,8 +91,6 @@
         font-size: 22px;
         white-space: nowrap; /*keeps all the animations in single line*/
         overflow: hidden;
-        animation:
-            typing 2s
 
     }
     .about-text p {
@@ -105,11 +99,6 @@
     /*cursor blinking*/
     @keyframes cursor {
         50% { border-color: transparent}
-    }
-    /*typing effect*/
-    @keyframes typing {
-        from  {width: 0}
-        to {width: 100%}
     }
     /* CSS for projects route*/
     .accordion{
@@ -261,7 +250,247 @@
         background-color: black;
         border-color: black;
     }
+    /*CSS for resume page*/
+    .pdf {
+        padding-top: 75px;
+    }
 
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+    /*CSS for home page*/
+    section {
+        display:grid;
+        place-items: center;
+        align-content: center;
+        min-height: 100vh;
+    }
+    .hidden {
+        opacity: 0;
+        filter: blur(5px);
+        transform: translateX(-100%);
+        transition: all 1s;
+        margin-bottom: 100px;
+    }
+    @media(prefers-reduced-motion){
+        .hidden {
+            transition: none;
+        }
+    }
+    .show {
+        opacity: 1;
+        filter: blur(0);
+        transform: translateX(0);
+    }
+    .nav-link {
+        color: black;
+        font-size: 2rem;
+        font-weight: 700;
+        text-decoration: none;
+        margin-right: 50px;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
+    
+    /* Home page header*/ 
+    .header-text {
+        font-size: 2rem;
+        letter-spacing: 2px;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        text-align: center;
+        overflow: hidden;
+        padding-left: 10px;
+        padding-right: 10px; 
+    }
+    .header2-text {
+        font-size: 1.75rem;
+        letter-spacing: 2px;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        text-align: center;
+        overflow: hidden;
+        margin-bottom: 25px;
+    }
+    .about-container{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding-top: 4rem;
+    }
+    .about-Image {
+        border-radius: 50%;
+        overflow: hidden;
+        height: 400px;
+        width: 400px;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        user-select: none;
+    }
+    .about-text {
+        margin-left: 100px;
+        max-width: 400px;
+        display: flex;
+        flex-direction: column;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+    }
+    .about-text h1{
+        font-size: 40px;
+        white-space: nowrap; /*keeps all the animations in single line*/
+        overflow: hidden;
+    }
+    .about-text p {
+        font-size: 24px;
+    }
+
+    /* CSS for projects route*/
+    .accordion{
+        padding: 0;
+        margin: 0;
+        margin-top: 25px;
+        box-sizing: border-box;
+    }
+    .accordion-items {
+        font-size: 25px;
+        font-style: italic;
+    }
+    .accordion .wrapper {
+        border-bottom: 1px solid black;
+        overflow: hidden;
+    }
+    .accordion .wrapper .question-container {
+        width: 100%;
+        text-align: left;
+        padding: 20px 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-weight: 500;
+        font-size: 25px;
+        background: transparent;
+        border: none;
+        cursor: pointer;
+    }
+
+    /* Jasmin Accordion CSS*/
+    .accordion .question-container.Jasmin.active {
+        color: white;
+        background-image: linear-gradient(90deg,rgba(0,209,133), white);
+    }
+    .accordion .wrapper.arrow.Jasmin{
+        font-size: 2rem;
+        transition: .5s ease-in-out;
+        color: rgba(0,209,133);
+    }
+    .accordion .arrow.Jasmin.active {
+        rotate: 180deg;
+        color: rgba(0,209,133);
+    }
+
+    /* Word-Boss Accordion CSS*/
+    .accordion .question-container.Word-Boss.active {
+        color: white;
+        background-image: linear-gradient(90deg,rgb(255,140,0), white);
+    }
+    .accordion .wrapper.arrow.Word-Boss{
+        font-size: 2rem;
+        transition: .5s ease-in-out;
+        color: rgb(255,140,0);
+    }
+    .accordion .arrow.Word-Boss.active {
+        rotate: 180deg;
+        color: rgb(255,140,0);
+    }
+
+    /* Jimbro Accordion CSS*/
+    .accordion .question-container.Jimbro.active {
+        color: white;
+        background-image: linear-gradient(90deg,#325288, white);
+    }
+    .accordion .wrapper.arrow.Jimbro{
+        font-size: 2rem;
+        transition: .5s ease-in-out;
+        color: #325288;
+    }
+    .accordion .arrow.Jimbro.active {
+        rotate: 180deg;
+        color: #325288; 
+    }
+
+    /* Trvl Accordion CSS*/
+    .accordion .question-container.Trvl.active {
+        color: white;
+        background-image: linear-gradient(90deg,#FF1A1A, white);
+    }
+    .accordion .wrapper.arrow.Trvl{
+        font-size: 2rem;
+        transition: .5s ease-in-out;
+        color: #FF1A1A;
+    }
+    .accordion .arrow.Trvl.active {
+        rotate: 180deg;
+        color: #FF1A1A;
+    }
+    /*Inner content for accordion*/
+    .accordion .wrapper .answer-container {
+        padding: 0 1rem;
+        transition: height .7s ease-in-out;
+    }
+    .accordion .wrapper .answer-content {
+        padding: 1rem 0;
+        font-size: 25px;
+        font-style: italic;
+    }
+
+    /*Face Icon in Resume Page*/
+    .hover-link {
+        position: relative;
+        text-decoration: none;
+        border-left: 1px solid #fff;
+        user-select: none;
+    }
+
+    .hover-text {
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: rgba(0, 0, 0, 3);
+        color: white;
+        padding: 5px 10px;
+        border-radius: 5px;
+        font-size: 30px;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+        pointer-events: none;
+    }
+    /*Git-hub link */
+    .git-Image {
+        border-radius: 50%;
+        overflow: hidden;
+        height: 50px;
+        width: 50px;
+        margin-bottom: 25px;
+    }
+    /*CSS for resume page*/
+    .resume-button{
+        width: 300px;
+        height: 35px;
+        justify-content: center;
+        font-size: 15px;
+        display: flex;
+        background-color: black;
+        border-color: black;
+    }
+    /*CSS for resume page*/
+    .pdf {
+        padding-top: 75px;
+    }
+    
 }
 @media (min-width: 1025px) {
     /*CSS for home page*/
@@ -290,13 +519,14 @@
         filter: blur(0);
         transform: translateX(0);
     }
+    /* navbar */
     .nav-link {
         color: black;
         font-size: 2rem;
         font-weight: 700;
         cursor: pointer;
         text-decoration: none;
-        margin-right: 100px;
+        margin-right: 40px;
         border-top-left-radius: 15px;
         border-bottom-left-radius: 15px;
         border-top-right-radius: 15px;
@@ -309,22 +539,16 @@
         background-color: black;
     }
 
-    /* Home page header*/
-
-    .typing{
-        display: inline-block;
-        height: 2.5rem;
-    }
+    /* Home page header*/ 
     .header-text {
-        font-size: 2.5em;
+        font-size: 3rem;
         letter-spacing: 2px;
         font-weight: "Thin 100";
         width: 100%;
         white-space: nowrap;
         overflow: hidden;
-        animation: 
-            typing 2s,
-            cursor .4s step-end infinite alternate; 
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
     .header2-text {
@@ -335,8 +559,6 @@
         white-space: nowrap;
         overflow: hidden;
         margin-bottom: 25px;
-        animation: 
-            typing 2s,
     }
 
     .about-container{
@@ -374,11 +596,7 @@
         font-size: 70px;
         white-space: nowrap; /*keeps all the animations in single line*/
         overflow: hidden;
-        animation:
-            typing 2s
-
     }
-
     .about-text p {
         font-size: 32px;
     }
@@ -388,12 +606,6 @@
     @keyframes cursor {
         50% { border-color: transparent}
     }
-    /*typing effect*/
-    @keyframes typing {
-        from  {width: 0}
-        to {width: 100%}
-    }
-
     /* CSS for projects route*/
     .accordion{
         padding: 0;
@@ -595,19 +807,7 @@
     }
 
     /*CSS for resume page*/
-
-    .resume-button{
-        width: 1000px;
-        height: 75px;
-        justify-content: center;
-        font-size: 45px;
-        display: flex;
-        background-color: black;
-        border-color: black;
-    }
-
-    .resume-button:hover{
-        background-color: white;
-        color: black;
+    .pdf {
+        padding-top: 75px;
     }
 }
